# udp_multicast_chat_room

./: CMakeLists.txt  README.md
server/: CMakeLists.txt  README.md
server/src/: channel.hpp  log.hpp  server.cpp  server.hpp  tcp_chat_room.hpp  udp_chat_room.hpp  udp_server.cpp  udp_server.hpp
src/: main.cpp  server.cpp  server.hpp  udp_server.cpp  udp_server.hpp
ui/: Cargo.toml  Dioxus.toml
ui/assets/: main.css
ui/src/: helpers.rs  main.rs  network.rs  types.rs
ui/src/components/: chat.rs  connect_screen.rs  mod.rs  sidebar.rs  toast.rs
